# JobSpring-Api

./: .gitignore  README.md  play.py  pyproject.toml
app/: api.py  cv_processing.py  get_embedding_function.py  groq.py  pdf_loader.py  requirements.txt
cvs/: sample-cv.txt
docs/: MCP-setup.md
src/: main.py
src/api/: main.py
src/api/routes/: calendar.py  email.py  processing.py
src/core/: config.py
src/cv_agent/: agent.py  cv_parser.py  models.py
src/cv_agent/mcp/: availability_checker.py  config.py  g_calendar.py  g_email.py  schemas.py
src/cv_agent/studio/: agent.py  langgraph.json
src/integration/: files.py
src/services/calendar/: schemas.py
src/services/email/: schemas.py
src/services/processing/: schemas.py
tests/cv_agent/mcp/: test_g_calendar.py  test_google_workspace.py
